load("@bazel_features//:features.bzl", "bazel_features")
load("@bazel_lib//lib:transitions.bzl", "platform_transition_binary", "platform_transition_filegroup")
load("@bazel_skylib//rules:write_file.bzl", "write_file")
load("@llvm//:defs.bzl", "exec_test")
load("@llvm//3rd_party/gcc:version.bzl", "DEFAULT_GCC_VERSION", "libstdcxx_constraint_value")
load("@platforms//host:constraints.bzl", "HOST_CONSTRAINTS")
load("@rules_cc//cc:cc_binary.bzl", "cc_binary")
load("@rules_cc//cc:cc_import.bzl", "cc_import")
load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("@rules_cc//cc:cc_static_library.bzl", "cc_static_library")
load("@rules_cc//cc:cc_test.bzl", "cc_test")
load("@rules_cc//cc:objc_library.bzl", "objc_library")
load("@rules_python//python:defs.bzl", "py_test")
load("@rules_shell//shell:sh_test.bzl", "sh_test")
load(
    "//:defs.bzl",
    "asan_cc_binary",
    "cfi_cc_binary",
    "dfsan_cc_binary",
    "fuzzer_asan_cc_binary",
    "fuzzer_cc_binary",
    "lsan_cc_binary",
    "msan_cc_binary",
    "nsan_cc_binary",
    "opt_binary",
    "profile_cc_binary",
    "rtsan_cc_binary",
    "safestack_cc_binary",
    "tsan_cc_binary",
    "tysan_cc_binary",
    "ubsan_cc_binary",
    "xray_cc_binary",
)
load(":bazel_version.bzl", "validate_static_library_compatible")
load(":musl_header_generation_tests.bzl", "musl_header_generation_tests")
load(":windows_runtime_dynamic_libraries_test.bzl", "windows_runtime_dynamic_libraries_assertion")

_VALIDATE_STATIC_LIBRARY_COMPATIBLE = validate_static_library_compatible()

_DSYM_OUTPUT_TEST_BAZEL9_COMPATIBLE = bazel_features.cc.supports_starlarkified_toolchains

_DSYM_OUTPUT_TEST_COMPATIBLE = select({
    "@platforms//os:windows": ["@platforms//:incompatible"],
    "//conditions:default": [],
}) if _DSYM_OUTPUT_TEST_BAZEL9_COMPATIBLE else ["@platforms//:incompatible"]

_DSYM_OUTPUT_TEST_DATA = [":main_dsym_bundle"] if _DSYM_OUTPUT_TEST_BAZEL9_COMPATIBLE else []

_DSYM_OUTPUT_TEST_ENV = {
    "DSYM_BUNDLE": "$(rootpath :main_dsym_bundle)",
    "DWARF_FILE": "main_dsym",
} if _DSYM_OUTPUT_TEST_BAZEL9_COMPATIBLE else {}

musl_header_generation_tests(name = "musl_header_generation_tests")

cc_library(
    name = "objc_c_lib",
    hdrs = ["objc_c_lib.h"],
    tags = ["manual"],
)

objc_library(
    name = "objc_lib",
    srcs = ["objc_lib.m"],
    hdrs = ["objc_lib.h"],
    tags = ["manual"],
    deps = [":objc_c_lib"],
    alwayslink = True,
)

cc_test(
    name = "objc_cc_test",
    srcs = ["objc_cc_test.cc"],
    target_compatible_with = select({
        "@platforms//os:macos": [],
        "//conditions:default": ["@platforms//:incompatible"],
    }),
    deps = [":objc_lib"],
)

opt_binary(
    name = "no_optimize",
    srcs = ["no_optimize.cc"],
    copts = ["-O0"],
    target_compatible_with = select({
        "@platforms//os:windows": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),
)

opt_binary(
    name = "optimize",
    srcs = ["optimize.cc"],
    target_compatible_with = select({
        "@platforms//os:windows": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),
)

# dynamic linker + dynamic runtime libs
cc_binary(
    name = "main_dynamic",
    srcs = ["main.cc"],
    linkstatic = False,
    target_compatible_with = select({
        # We do not support musl libc.so
        "@platforms//os:windows": ["@platforms//:incompatible"],
        "@llvm//constraints/libc:musl": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),
)

cc_binary(
    name = "libstdcxx_main_dynamic",
    srcs = ["main.cc"],
    linkstatic = False,
    target_compatible_with = select({
        "@llvm//constraints/cxxstdlib:libstdcxx": [],
        "//conditions:default": ["@platforms//:incompatible"],
    }) + select({
        "@platforms//os:linux": [],
        "//conditions:default": ["@platforms//:incompatible"],
    }) + select({
        # We do not support musl libc.so.
        "@llvm//constraints/libc:musl": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),
)

cc_binary(
    name = "libstdcxx_main_dynamic_with_linkopts",
    srcs = ["main.cc"],
    linkopts = [
        "-lstdc++",
        "-lstdc++fs",
        "-lsupc++",
    ],
    linkstatic = False,
    target_compatible_with = select({
        "@llvm//constraints/cxxstdlib:libstdcxx": [],
        "//conditions:default": ["@platforms//:incompatible"],
    }) + select({
        "@platforms//os:linux": [],
        "//conditions:default": ["@platforms//:incompatible"],
    }) + select({
        # We do not support musl libc.so.
        "@llvm//constraints/libc:musl": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),
)

cc_binary(
    name = "libstdcxx_headers_dynamic",
    srcs = ["libstdcxx_headers.cc"],
    copts = ["-std=c++20"],
    linkstatic = False,
    target_compatible_with = select({
        "@llvm//constraints/cxxstdlib:libstdcxx": [],
        "//conditions:default": ["@platforms//:incompatible"],
    }) + select({
        "@platforms//os:linux": [],
        "//conditions:default": ["@platforms//:incompatible"],
    }) + select({
        # We do not support musl libc.so.
        "@llvm//constraints/libc:musl": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),
    deps = ["@gcc//:libstdcxxfs"],
)

cc_binary(
    name = "libstdcxx_headers_dynamic_with_linkopts",
    srcs = ["libstdcxx_headers.cc"],
    copts = ["-std=c++20"],
    linkopts = ["-lstdc++fs"],
    linkstatic = False,
    target_compatible_with = select({
        "@llvm//constraints/cxxstdlib:libstdcxx": [],
        "//conditions:default": ["@platforms//:incompatible"],
    }) + select({
        "@platforms//os:linux": [],
        "//conditions:default": ["@platforms//:incompatible"],
    }) + select({
        # We do not support musl libc.so.
        "@llvm//constraints/libc:musl": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),
)

LIBSTDCXX_PLATFORMS = [
    ("linux_x86_64_libstdcxx", "@platforms//cpu:x86_64", "@llvm//constraints/libc:gnu.2.28"),
    ("linux_aarch64_libstdcxx", "@platforms//cpu:aarch64", "@llvm//constraints/libc:gnu.2.28"),
    ("linux_armv7_libstdcxx", "@platforms//cpu:armv7", "@llvm//constraints/libc:gnu.2.28"),
    ("linux_riscv64_libstdcxx", "@platforms//cpu:riscv64", "@llvm//constraints/libc:gnu.2.33"),
    ("linux_s390x_libstdcxx", "@platforms//cpu:s390x", "@llvm//constraints/libc:gnu.2.28"),
]

_LIBSTDCXX_E2E_TARGET_COMPATIBLE_WITH = select({
    # The transition wrappers below build Linux libstdc++ artifacts. Keep them
    # out of non-Linux //... expansion until libstdc++ supports those targets.
    "@platforms//os:linux": [],
    "//conditions:default": ["@platforms//:incompatible"],
})

_DEFAULT_LIBSTDCXX_CONSTRAINT = "@llvm//constraints/cxxstdlib:" + libstdcxx_constraint_value(DEFAULT_GCC_VERSION)

[
    platform(
        name = name,
        constraint_values = [
            cpu,
            "@platforms//os:linux",
            libc,
            _DEFAULT_LIBSTDCXX_CONSTRAINT,
        ],
    )
    for name, cpu, libc in LIBSTDCXX_PLATFORMS
]

platform_transition_filegroup(
    name = "libstdcxx_main_dynamic_linux_x86_64",
    srcs = [":libstdcxx_main_dynamic"],
    target_compatible_with = _LIBSTDCXX_E2E_TARGET_COMPATIBLE_WITH,
    target_platform = ":linux_x86_64_libstdcxx",
)

platform_transition_filegroup(
    name = "libstdcxx_main_dynamic_with_linkopts_linux_x86_64",
    srcs = [":libstdcxx_main_dynamic_with_linkopts"],
    target_compatible_with = _LIBSTDCXX_E2E_TARGET_COMPATIBLE_WITH,
    target_platform = ":linux_x86_64_libstdcxx",
)

[
    platform_transition_binary(
        name = "libstdcxx_main_dynamic_" + platform_name,
        binary = ":libstdcxx_main_dynamic",
        target_compatible_with = _LIBSTDCXX_E2E_TARGET_COMPATIBLE_WITH,
        target_platform = ":" + platform_name,
    )
    for platform_name, _, _ in LIBSTDCXX_PLATFORMS
]

[
    platform_transition_binary(
        name = "libstdcxx_headers_dynamic_" + platform_name,
        binary = ":libstdcxx_headers_dynamic",
        target_compatible_with = _LIBSTDCXX_E2E_TARGET_COMPATIBLE_WITH,
        target_platform = ":" + platform_name,
    )
    for platform_name, _, _ in LIBSTDCXX_PLATFORMS
]

[
    platform_transition_binary(
        name = "libstdcxx_headers_dynamic_with_linkopts_" + platform_name,
        binary = ":libstdcxx_headers_dynamic_with_linkopts",
        target_compatible_with = _LIBSTDCXX_E2E_TARGET_COMPATIBLE_WITH,
        target_platform = ":" + platform_name,
    )
    for platform_name, _, _ in LIBSTDCXX_PLATFORMS
]

exec_test(
    name = "libstdcxx_main_dynamic_output_test",
    srcs = ["libstdcxx_main_dynamic_output_test.sh"],
    data = [":libstdcxx_main_dynamic_linux_x86_64"],
    env = {"BINARY": "$(rootpath :libstdcxx_main_dynamic_linux_x86_64)"},
    rule = sh_test,
    target_compatible_with = select({
        "@platforms//cpu:x86_64": [],
        "//conditions:default": ["@platforms//:incompatible"],
    }) + select({
        "@platforms//os:linux": [],
        "//conditions:default": ["@platforms//:incompatible"],
    }),
)

exec_test(
    name = "libstdcxx_main_dynamic_with_linkopts_output_test",
    srcs = ["libstdcxx_main_dynamic_output_test.sh"],
    data = [":libstdcxx_main_dynamic_with_linkopts_linux_x86_64"],
    env = {"BINARY": "$(rootpath :libstdcxx_main_dynamic_with_linkopts_linux_x86_64)"},
    rule = sh_test,
    target_compatible_with = select({
        "@platforms//cpu:x86_64": [],
        "//conditions:default": ["@platforms//:incompatible"],
    }) + select({
        "@platforms//os:linux": [],
        "//conditions:default": ["@platforms//:incompatible"],
    }),
)

# dynamic linker + static runtime libs
cc_binary(
    name = "main_default",
    srcs = ["main.cc"],
)

# same as default
cc_binary(
    name = "main_static",
    srcs = ["main.cc"],
    linkstatic = True,
)

cc_binary(
    name = "windows_add.dll",
    srcs = ["windows_add.cc"],
    linkshared = True,
    target_compatible_with = ["@platforms//os:windows"],
)

cc_import(
    name = "windows_add_import",
    shared_library = ":windows_add.dll",
    target_compatible_with = ["@platforms//os:windows"],
)

cc_binary(
    name = "windows_runtime_dynamic_libraries_binary",
    srcs = ["windows_dll_main.cc"],
    target_compatible_with = ["@platforms//os:windows"],
    deps = [":windows_add_import"],
)

windows_runtime_dynamic_libraries_assertion(
    name = "windows_runtime_dynamic_libraries_test",
    runtime_library_basename = "windows_add.dll",
    target = ":windows_runtime_dynamic_libraries_binary",
    target_compatible_with = ["@platforms//os:windows"],
)

write_file(
    name = "windows_explicit_def_file",
    out = "windows_explicit.def",
    content = [
        "LIBRARY windows_explicit_def",
        "EXPORTS",
        "    add42=internal_add42",
    ],
)

cc_binary(
    name = "windows_explicit_def.dll",
    srcs = ["windows_explicit_def.cc"],
    linkshared = True,
    target_compatible_with = ["@platforms//os:windows"],
    win_def_file = ":windows_explicit_def_file",
)

cc_import(
    name = "windows_explicit_def_import",
    shared_library = ":windows_explicit_def.dll",
    target_compatible_with = ["@platforms//os:windows"],
)

cc_binary(
    name = "windows_explicit_def_binary",
    srcs = ["windows_explicit_def_test.cc"],
    target_compatible_with = ["@platforms//os:windows"],
    deps = [":windows_explicit_def_import"],
)

cc_test(
    name = "windows_explicit_def_test",
    srcs = ["windows_explicit_def_test.cc"],
    exec_properties = {"test.no-remote": "1"},
    target_compatible_with = ["@platforms//os:windows"],
    deps = [":windows_explicit_def_import"],
)

cc_library(
    name = "windows_generated_def_library",
    srcs = ["windows_generated_def.cc"],
    target_compatible_with = ["@platforms//os:windows"],
)

cc_binary(
    name = "windows_generated_def.dll",
    exec_compatible_with = [
        "@platforms//os:windows",
    ],
    features = ["windows_export_all_symbols"],
    linkopts = ["-Wl,--exclude-all-symbols"],
    linkshared = True,
    tags = ["no-remote"],
    target_compatible_with = ["@platforms//os:windows"],
    deps = [":windows_generated_def_library"],
)

cc_import(
    name = "windows_generated_def_import",
    shared_library = ":windows_generated_def.dll",
    target_compatible_with = ["@platforms//os:windows"],
)

cc_test(
    name = "windows_generated_def_test",
    srcs = ["windows_generated_def_test.cc"],
    exec_properties = {"test.no-remote": "1"},
    target_compatible_with = ["@platforms//os:windows"],
    deps = [":windows_generated_def_import"],
)

# dynamic linker + static runtime libs (even tho -static)
# but because musl adds -static-pie, no dynamic linker at all.
cc_binary(
    name = "main_fully_static",
    srcs = ["main.cc"],
    features = ["fully_static_link"],
    linkstatic = True,
    target_compatible_with = select({
        # only musl supports fully static linking.
        "@llvm//constraints/libc:musl": [],
        "//conditions:default": ["@platforms//:incompatible"],
    }),
)

# Implies dynamic_runtime_libs
cc_test(
    name = "test",
    srcs = ["main.cc"],
    exec_compatible_with = HOST_CONSTRAINTS,
    # remote-exec tests can't run without forcing the target platform to match
    # the remote exec platform.
    tags = ["no-remote"],
    target_compatible_with = select({
        "@platforms//os:windows": ["@platforms//:incompatible"],
        # We do not support musl libc.so
        "@llvm//constraints/libc:musl": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),
)

cc_binary(
    name = "main",
    srcs = ["main.cc"],
    # We provide these libs explicitly via the toolchain runtime_library.
    # These options are all no-ops as they resolve to empty stubs.
    # This is basically a test that we can properly ignore these opts.
    linkopts = [
        "-lc++",
        "-lc++abi",
        "-lunwind",
    ],
    target_compatible_with = select({
        "@platforms//os:windows": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),
)

cc_binary(
    name = "main_dsym",
    srcs = ["main.cc"],
    features = [
        "generate_dsym_file",
        "strip_debug_symbols",
    ],
    target_compatible_with = select({
        "@platforms//os:macos": [],
        "//conditions:default": ["@platforms//:incompatible"],
    }),
)

filegroup(
    name = "main_dsym_bundle_",
    srcs = [":main_dsym"],
    output_group = "dsyms",
)

platform_transition_filegroup(
    name = "main_dsym_bundle",
    srcs = [":main_dsym_bundle_"],
    target_platform = "@llvm//platforms:macos_aarch64",
)

sh_test(
    name = "dsym_output_test",
    srcs = ["dsym_output_test.sh"],
    data = _DSYM_OUTPUT_TEST_DATA,
    env = _DSYM_OUTPUT_TEST_ENV,
    target_compatible_with = _DSYM_OUTPUT_TEST_COMPATIBLE,
)

# TODO(zbarsky): Turn more of this into a macro once we have more sanitizers?
ubsan_cc_binary(
    name = "ubsan_fail",
    srcs = ["ubsan_fail.cc"],
    target_compatible_with = select({
        "@platforms//os:windows": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),
)

exec_test(
    name = "ubsan_output_test",
    srcs = ["ubsan_output_test.sh"],
    data = [":ubsan_fail"],
    env = {"BINARY": "$(rootpath :ubsan_fail)"},
    rule = sh_test,
    target_compatible_with = select({
        "@platforms//os:windows": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),
)

cfi_cc_binary(
    name = "cfi_fail",
    srcs = ["cfi_fail.cc"],
    target_compatible_with = select({
        "@platforms//os:linux": [],
        "//conditions:default": ["@platforms//:incompatible"],
    }),
)

exec_test(
    name = "cfi_output_test",
    srcs = ["cfi_output_test.sh"],
    data = [":cfi_fail"],
    env = {"BINARY": "$(rootpath :cfi_fail)"},
    rule = sh_test,
    target_compatible_with = select({
        "@platforms//os:linux": [],
        "//conditions:default": ["@platforms//:incompatible"],
    }),
)

msan_cc_binary(
    name = "msan_fail",
    srcs = ["msan_fail.cc"],
    target_compatible_with = select({
        "@platforms//os:linux": [],
        "//conditions:default": ["@platforms//:incompatible"],
    }),
)

exec_test(
    name = "msan_output_test",
    srcs = ["msan_output_test.sh"],
    data = [":msan_fail"],
    env = {"BINARY": "$(rootpath :msan_fail)"},
    rule = sh_test,
    target_compatible_with = select({
        "@platforms//os:linux": [],
        "//conditions:default": ["@platforms//:incompatible"],
    }),
)

dfsan_cc_binary(
    name = "dfsan_fail",
    srcs = ["dfsan_fail.cc"],
    target_compatible_with = select({
        "@platforms//os:linux": [],
        "//conditions:default": ["@platforms//:incompatible"],
    }),
)

exec_test(
    name = "dfsan_output_test",
    srcs = ["dfsan_output_test.sh"],
    data = [":dfsan_fail"],
    env = {
        "BINARY": "$(rootpath :dfsan_fail)",
        "DFSAN_OPTIONS": "warn_unimplemented=1",
    },
    rule = sh_test,
    target_compatible_with = select({
        "@platforms//os:linux": [],
        "//conditions:default": ["@platforms//:incompatible"],
    }),
)

nsan_cc_binary(
    name = "nsan_fail",
    srcs = ["nsan_fail.cc"],
    target_compatible_with = select({
        # nsan is x86 only
        "@llvm//platforms/config:linux_x86_64": [],
        "//conditions:default": ["@platforms//:incompatible"],
    }),
)

exec_test(
    name = "nsan_output_test",
    srcs = ["nsan_output_test.sh"],
    data = [":nsan_fail"],
    env = {
        "BINARY": "$(rootpath :nsan_fail)",
        "NSAN_OPTIONS": "check_nan=true,halt_on_error=0",
    },
    rule = sh_test,
    target_compatible_with = select({
        # nsan is x86 only
        "@llvm//platforms/config:linux_x86_64": [],
        "//conditions:default": ["@platforms//:incompatible"],
    }),
)

safestack_cc_binary(
    name = "safestack_fail",
    srcs = ["safestack_fail.cc"],
    target_compatible_with = select({
        "@platforms//os:linux": [],
        "//conditions:default": ["@platforms//:incompatible"],
    }),
)

exec_test(
    name = "safestack_output_test",
    srcs = ["safestack_output_test.sh"],
    data = [":safestack_fail"],
    env = {"BINARY": "$(rootpath :safestack_fail)"},
    rule = sh_test,
    target_compatible_with = select({
        "@platforms//os:linux": [],
        "//conditions:default": ["@platforms//:incompatible"],
    }),
)

rtsan_cc_binary(
    name = "rtsan_fail",
    srcs = ["rtsan_fail.cc"],
    target_compatible_with = select({
        "@platforms//os:linux": [],
        "//conditions:default": ["@platforms//:incompatible"],
    }),
)

exec_test(
    name = "rtsan_output_test",
    srcs = ["rtsan_output_test.sh"],
    data = [":rtsan_fail"],
    env = {"BINARY": "$(rootpath :rtsan_fail)"},
    rule = sh_test,
    target_compatible_with = select({
        "@platforms//os:linux": [],
        "//conditions:default": ["@platforms//:incompatible"],
    }),
)

tysan_cc_binary(
    name = "tysan_fail",
    srcs = ["tysan_fail.cc"],
    target_compatible_with = select({
        "@platforms//os:linux": [],
        "//conditions:default": ["@platforms//:incompatible"],
    }),
)

exec_test(
    name = "tysan_output_test",
    srcs = ["tysan_output_test.sh"],
    data = [":tysan_fail"],
    env = {"BINARY": "$(rootpath :tysan_fail)"},
    rule = sh_test,
    target_compatible_with = select({
        "@platforms//os:linux": [],
        "//conditions:default": ["@platforms//:incompatible"],
    }),
)

tsan_cc_binary(
    name = "tsan_fail",
    srcs = ["tsan_fail.cc"],
    target_compatible_with = select({
        "@platforms//os:linux": [],
        "//conditions:default": ["@platforms//:incompatible"],
    }),
)

exec_test(
    name = "tsan_output_test",
    srcs = ["tsan_output_test.sh"],
    data = [":tsan_fail"],
    env = {"BINARY": "$(rootpath :tsan_fail)"},
    rule = sh_test,
    target_compatible_with = select({
        # firecracker + docker on arm64 is too restrictive.
        "@llvm//platforms/config:linux_x86_64": [],
        "//conditions:default": ["@platforms//:incompatible"],
    }),
)

asan_cc_binary(
    name = "asan_fail",
    srcs = ["asan_fail.cc"],
    linkopts = [
        "-Wl,--icf=none",
    ],
    target_compatible_with = select({
        "@platforms//os:linux": [],
        "//conditions:default": ["@platforms//:incompatible"],
    }),
)

exec_test(
    name = "asan_output_test",
    srcs = ["asan_output_test.sh"],
    data = [":asan_fail"],
    env = {"BINARY": "$(rootpath :asan_fail)"},
    rule = sh_test,
)

lsan_cc_binary(
    name = "lsan_fail",
    srcs = ["lsan_fail.cc"],
    target_compatible_with = select({
        "@platforms//os:linux": [],
        "//conditions:default": ["@platforms//:incompatible"],
    }),
)

exec_test(
    name = "lsan_output_test",
    srcs = ["lsan_output_test.sh"],
    data = [":lsan_fail"],
    env = {"BINARY": "$(rootpath :lsan_fail)"},
    rule = sh_test,
    target_compatible_with = select({
        "@platforms//os:linux": [],
        "//conditions:default": ["@platforms//:incompatible"],
    }),
)

# Test that this toolchain properly supports the supports_pic capability.
cc_binary(
    name = "supports_pic_",
    srcs = ["supports_pic.cc"],
    linkshared = True,
    tags = ["manual"],
)

sh_test(
    name = "supports_pic_dylib_test",
    srcs = ["supports_pic_dylib_test.sh"],
    data = [":supports_pic_"],
    env = {"BINARY": "$(rootpath :supports_pic_)"},
    target_compatible_with = select({
        "@platforms//os:osx": [],
        "//conditions:default": ["@platforms//:incompatible"],
    }),
)

platform_transition_binary(
    name = "supports_pic",
    binary = ":supports_pic_",
    target_platform = "@llvm//platforms:linux_x86_64",
)

cc_test(
    name = "windows_test",
    srcs = ["windows_test.cc"],
    exec_properties = {"test.no-remote": "1"},
    linkopts = [
        "-luuid",
    ],
    target_compatible_with = [
        "@platforms//os:windows",
    ],
)

cc_test(
    name = "windows_unicode_test",
    srcs = ["windows_unicode_test.cc"],
    exec_properties = {"test.no-remote": "1"},
    linkopts = ["-municode"],
    target_compatible_with = [
        "@platforms//os:windows",
    ],
)

cc_test(
    name = "pthread_test",
    srcs = ["pthread.cc"],
    copts = ["-pthread"],
    exec_properties = {"test.no-remote": "1"},
    linkopts = ["-pthread"],
)

cc_test(
    name = "libomp_test",
    srcs = ["libomp_test.cc"],
    copts = ["-fopenmp"],
    exec_compatible_with = HOST_CONSTRAINTS,
    linkstatic = True,
    tags = ["no-remote"],
    target_compatible_with = select({
        "@platforms//os:windows": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),
    deps = ["@llvm-project//openmp:libomp"],
)

cc_test(
    name = "header_parse_system_header",
    srcs = [
        "header_parse_system_header.h",
        "main.cc",
    ],
    features = [
        "layering_check",
        "parse_headers",
    ],
    # TODO(zbarsky): Tests can't execute remotely from Windows hosts
    tags = ["no-remote"],
    target_compatible_with = select({
        # TODO: Header parsing fails on windows
        "@platforms//os:windows": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),
)

#######################################################

xray_cc_binary(
    name = "xray_main",
    srcs = ["xray_main.cc"],
    target_compatible_with = select({
        "@platforms//os:linux": [],
        "@platforms//os:macos": [],
        "//conditions:default": ["@platforms//:incompatible"],
    }),
)

py_test(
    name = "xray_output_test",
    srcs = ["xray_output_test.py"],
    data = [":xray_main"],
    env = {
        "BINARY": "$(rootpath :xray_main)",
    },
    exec_compatible_with = HOST_CONSTRAINTS,
    main = "xray_output_test.py",
    tags = ["no-remote"],
    target_compatible_with = select({
        "@platforms//os:linux": [],
        "@platforms//os:macos": [],
        "//conditions:default": ["@platforms//:incompatible"],
    }),
)

cc_library(
    name = "duplicate_symbol_a",
    srcs = ["duplicate_symbol_a.cc"],
)

cc_library(
    name = "duplicate_symbol_b",
    srcs = ["duplicate_symbol_b.cc"],
)

cc_static_library(
    name = "duplicate_symbol_lib",
    tags = ["manual"],
    target_compatible_with = _VALIDATE_STATIC_LIBRARY_COMPATIBLE,
    deps = [
        ":duplicate_symbol_a",
        ":duplicate_symbol_b",
    ],
)

cc_library(
    name = "comm_symbol_defs",
    srcs = [
        "comm_symbol_strong.c",
        "comm_symbol_tentative.S",
    ],
    tags = ["manual"],
)

cc_static_library(
    name = "comm_symbol_static_lib",
    target_compatible_with = _VALIDATE_STATIC_LIBRARY_COMPATIBLE,
    deps = [":comm_symbol_defs"],
)

cc_test(
    name = "duplicate_static_library_validator_test",
    size = "large",
    srcs = ["duplicate_static_library_failure_test.cc"],
    data = [
        ".bazelrc",
        "BUILD.bazel",
        "duplicate_symbol_a.cc",
        "duplicate_symbol_b.cc",
    ],
    env_inherit = ["PATH"],
    exec_properties = {"test.local": "1"},
    target_compatible_with = _VALIDATE_STATIC_LIBRARY_COMPATIBLE,
    deps = ["@bazel_tools//tools/cpp/runfiles"],
)

#######################################################

fuzzer_cc_binary(
    name = "fuzzer_main",
    srcs = ["fuzzer_main.cc"],
    target_compatible_with = select({
        "@platforms//os:linux": [],
        "//conditions:default": ["@platforms//:incompatible"],
    }),
)

profile_cc_binary(
    name = "profile_main",
    srcs = ["profile_main.cc"],
    target_compatible_with = select({
        "@platforms//os:linux": [],
        "@platforms//os:windows": [],
        "//conditions:default": ["@platforms//:incompatible"],
    }),
)

exec_test(
    name = "fuzzer_output_test",
    srcs = ["fuzzer_output_test.sh"],
    data = [":fuzzer_main"],
    env = {
        "BINARY": "$(rootpath :fuzzer_main)",
    },
    rule = sh_test,
    tags = ["no-remote"],
    target_compatible_with = select({
        "@platforms//os:linux": [],
        "//conditions:default": ["@platforms//:incompatible"],
    }),
)

fuzzer_asan_cc_binary(
    name = "fuzzer_asan_main",
    srcs = ["fuzzer_asan_main.cc"],
    target_compatible_with = select({
        "@platforms//os:linux": [],
        "//conditions:default": ["@platforms//:incompatible"],
    }),
)

exec_test(
    name = "fuzzer_asan_output_test",
    srcs = ["fuzzer_sanitizer_output_test.sh"],
    data = [":fuzzer_asan_main"],
    env = {
        "BINARY": "$(rootpath :fuzzer_asan_main)",
        "EXPECTED_OUTPUT": "ERROR: AddressSanitizer: heap-use-after-free",
        "EXPECT_NONZERO": "1",
        "INPUT_TEXT": "ASAN",
    },
    rule = sh_test,
    tags = ["no-remote"],
    target_compatible_with = select({
        "@platforms//os:linux": [],
        "//conditions:default": ["@platforms//:incompatible"],
    }),
)

fuzzer_cc_binary(
    name = "fuzzer_ubsan_main",
    srcs = ["fuzzer_ubsan_main.cc"],
    target_compatible_with = select({
        "@platforms//os:linux": [],
        "//conditions:default": ["@platforms//:incompatible"],
    }),
)

exec_test(
    name = "fuzzer_ubsan_output_test",
    srcs = ["fuzzer_sanitizer_output_test.sh"],
    data = [":fuzzer_ubsan_main"],
    env = {
        "BINARY": "$(rootpath :fuzzer_ubsan_main)",
        "EXPECTED_OUTPUT": "runtime error: signed integer overflow",
        "EXPECT_NONZERO": "0",
        "INPUT_TEXT": "UBSAN",
    },
    rule = sh_test,
    tags = ["no-remote"],
    target_compatible_with = select({
        "@platforms//os:linux": [],
        "//conditions:default": ["@platforms//:incompatible"],
    }),
)

sh_test(
    name = "profile_output_test",
    srcs = ["profile_output_test.sh"],
    data = [":profile_main"],
    env = {
        "BINARY": "$(rootpath :profile_main)",
    },
    env_inherit = ["PATH"],
    exec_compatible_with = HOST_CONSTRAINTS,
    tags = ["no-remote"],
    target_compatible_with = select({
        "@platforms//os:linux": [],
        "@platforms//os:windows": [],
        "//conditions:default": ["@platforms//:incompatible"],
    }),
)
