bazel_dep(name = "llvm", version = "")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_cc", version = "0.2.16")
bazel_dep(name = "rules_foreign_cc", version = "0.15.1")
bazel_dep(name = "rules_python", version = "1.7.0")

single_version_override(
    module_name = "rules_foreign_cc",
    patch_strip = 1,
    patches = [
        # https://github.com/bazel-contrib/rules_foreign_cc/pull/1470
        "//:rules_foreign_cc.patch",
    ],
)

local_path_override(
    module_name = "llvm",
    path = "../../",
)

llvm_source = use_extension("@llvm//extensions:llvm_source.bzl", "llvm_source")
use_repo(llvm_source, "compiler-rt", "libcxx", "libcxxabi", "libunwind", "llvm-libc", "llvm-raw", "llvm_config", "llvm_zlib", "llvm_zstd", "openmp")

# Register toolchains through the scoped repo to ensure this codepath works.
llvm_toolchains = use_extension("@llvm//extensions:toolchain.bzl", "toolchain")
use_repo(llvm_toolchains, "llvm_toolchains")

register_toolchains("@llvm_toolchains//:all")

# Bump transitive zlib version to avoid genrules.
bazel_dep(name = "zlib", version = "1.3.1.bcr.8")

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "pfm",
    # TODO: Switch back to this next llvm-raw bump
    # build_file = "@llvm-raw//utils/bazel/third_party_build:pfm.BUILD",
    build_file = "//:pfm.BUILD.bazel",
    sha256 = "d18b97764c755528c1051d376e33545d0eb60c6ebf85680436813fa5b04cc3d1",
    strip_prefix = "libpfm-4.13.0",
    urls = [
        "https://versaweb.dl.sourceforge.net/project/perfmon2/libpfm4/libpfm-4.13.0.tar.gz",
        "https://sourceforge.net/projects/perfmon2/files/libpfm4/libpfm-4.13.0.tar.gz",
    ],
)
