load("//:rust_binary_cross_build_test_suite.bzl", "rust_binary_cross_build_test_suite")

package(default_visibility = ["//visibility:public"])

platform(
    name = "host_linux_gnu",
    constraint_values = [
        "@llvm//constraints/libc:gnu.2.28",
    ],
    parents = ["@platforms//host"],
)

platform(
    name = "host_windows_gnullvm",
    constraint_values = [
        "@rules_rs//rs/experimental/platforms/constraints:windows_gnullvm",
    ],
    parents = ["@platforms//host"],
)

filegroup(
    name = "proc_macros",
    srcs = ["@crates//:serde_derive"],
)

rust_binary_cross_build_test_suite(
    name = "hello_world",
    srcs = ["src/main.rs"],
    platforms = {
        "@rules_rs//rs/experimental/platforms:aarch64-unknown-linux-gnu": "aarch64",
        "@rules_rs//rs/experimental/platforms:aarch64-apple-darwin": "arm64",
        "@rules_rs//rs/experimental/platforms:aarch64-pc-windows-gnullvm": "aarch64",
        "@rules_rs//rs/experimental/platforms:x86_64-unknown-linux-gnu": "x86-64",
        "@rules_rs//rs/experimental/platforms:x86_64-apple-darwin": "x86_64",
        "@rules_rs//rs/experimental/platforms:x86_64-pc-windows-gnullvm": "x86-64",
    },
    deps = [
        "@crates//:lz4-sys",
        "@crates//:mimalloc",
    ],
)
